--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -16,25 +16,26 @@
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="200dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleTextAppearance="@android:color/transparent"
+            app:contentScrim="@color/colorPrimary"
+            app:expandedTitleTextAppearance="@style/CollapseToolbar"
             android:fitsSystemWindows="true">
 
             <ImageView
-                android:background="@color/colorPrimary"
-                app:layout_collapseMode="parallax"
-                android:contentDescription="@string/app_name"
                 android:id="@+id/backdrop_image"
                 android:layout_width="match_parent"
-                android:layout_height="350dp" />
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:contentDescription="@string/app_name"
+                app:layout_collapseMode="parallax" />
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:title="@string/detail_title"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:title="Detail Movie"
+                app:titleTextAppearance="@style/ToolbarTitle"
                 app:layout_collapseMode="pin"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -52,12 +53,12 @@
             app:cardElevation="5dp"
             android:layout_marginBottom="15dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
                 <LinearLayout
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -122,9 +123,8 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
                                 <TextView
-                                    tools:text="8.5"
                                     android:textColor="#000"
-                                    android:id="@+id/tvDetailRating"
+                                    android:id="@+id/tvVoteAverage"
                                     android:layout_marginTop="@dimen/vertical_margin"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
@@ -149,28 +149,30 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     tools:text="Lorep ipsum adalah text bodoh yang tidak berguna dan berarti apa-apa. Jika anda berpikir itu ada gunanya, berarti anda kurang kerjaan"
+                    android:textSize="12dp"
                     android:textColor="#000"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginBottom="@dimen/vertical_margin"
                     android:id="@+id/tvDetailSinopsis"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-
-
-
 
         </android.support.v7.widget.CardView>
 
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_marginRight="@dimen/horizontal_margin"
+        android:backgroundTint="#E231EE"
+        app:fabCustomSize="40dp"
+        app:fabSize="auto"
+        android:layout_marginEnd="10dp"
         app:layout_anchorGravity="bottom|right|end"
         app:layout_anchor="@id/app_bar_layout"
         app:pressedTranslationZ="12dp"
-        android:src="@drawable/ic_favorite_black_24dp"
-        android:elevation="6dp"
+        android:src="@drawable/ic_favorite_white"
+        android:elevation="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
